Authentication completed; complete PostController

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,7 +8,11 @@
 
 	<h1>blog users!</h1>
 
-	<!--  TODO - list all users, with links to their blog pages -->
+	<ul th:each="user : ${users}">
+
+		<li class="users"><a class="user-list"
+			href="/blog/${user.username}" th:href="@{blog/${user.username}}" th:text="${user.username}"></a></li>
+	</ul>
 
 </body>
 </html>
