Blogz-spring complete!

--- a/src/main/resources/templates/blog.html
+++ b/src/main/resources/templates/blog.html
@@ -6,13 +6,16 @@
 
 <div th:replace="template :: navigation"></div>
 
-<h1>blog posts!</h1>
+<h1>blog posts<span th:if="${isUserPage}" th:text="' by ' + ${posts[0].author.username}"></span>!</h1>
+<hr/>
 
 <div th:each="post : ${posts}">
-
+	
 	<h2><a th:href="'/blog/' + ${post.author.username} + '/' + ${post.uid}" th:text="${post.title}"></a></h2>
 	<p th:text="${post.body}"></p>
 	<p class="post-author">written by <a th:href="'/blog/' + ${post.author.username}" th:text="${post.author.username}"></a></p>
+	
+	<hr/>
 
 </div>
 
